<resources>
    <string name="app_name">InstaLoader</string>
    <string name="enter_url_headline">ENTER URL</string>
    <string name="bt_download">Download</string>
    <string name="bt_paste_link">Paste Link</string>
    <string name="menu_help">Help</string>
    <string name="download_failed_text">Download Failed</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="feedback">Feedback</string>
    <string name="version">Version:</string>
    <string name="report_a_bug">Report A Bug</string>
    <string name="help_icon_content_description">Help Icon</string>
    <string name="instagram_icon_content_description">Instagram Icon</string>
    <string name="edit_text_hint">TYPE YOUR URL HERE</string>
    <string name="media_preview_content_description">Media Preview</string>
    <string name="mutiple_icon_content_description">Multiple Icon</string>
    <string name="play_icon_content_description">Play Icon</string>
    <string name="initial_progress">0%</string>
    <string name="username_initial_text">Loading…</string>
    <string name="copy_icon_content_description">Copy Icon</string>
    <string name="in_queue_textView">In Queue:\u0020</string>
    <string name="download_count">0</string>
    <string name="download_location_header_textview">Download Location</string>
    <string name="download_location_textview">Internal Storage/Download/InstaLoader/</string>
    <string name="settings_category_general">General</string>
    <string name="settings_category_about">About</string>
    <string name="help_share_textview">Share This App</string>
</resources>